Completed: Category list, icons, site map, about, site status

--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <script src="https://kit.fontawesome.com/e4619561f0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
     <script type="module" src="./js/main.js"></script>
   </head>
   <body>
+    <i class="fa-solid fa-house"></i>
     <header class="navigation">
-
     </header>
     <section id="app" class="main">
       <section class="main_container">
@@ -17,5 +18,6 @@
     </section>
     <footer class="footer">
     </footer>
+    <i class="fa-solid fa-house"></i>
   </body>
 </html>
