--- a/src/my_activities/index.html
+++ b/src/my_activities/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <script src="https://kit.fontawesome.com/e4619561f0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
     <script type="module" src="../js/myActivities.js"></script>
   </head>
