--- a/src/site_status/index.html
+++ b/src/site_status/index.html
@@ -6,15 +6,18 @@
     <title>Vite App</title>
     <script src="https://kit.fontawesome.com/e4619561f0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
-    <script type="module" src="../js/activityDetails.js"></script>
+    <script type="module" src="../js/siteStatus.js"></script>
   </head>
   <body>
     <header class="navigation">
-
     </header>
     <section id="app" class="main">
       <section class="main_container">
-
+        <div>
+          <h3>Status of website sources:</h3>
+          <p>Boredapi.com: <span class="boredApi"></span></p>
+          <p>Unsplash.com: <span class="unsplashApi"></span></p>
+        </div>
       </section>
     </section>
     <footer class="footer">
