Bugfix: images, small devices

--- a/src/sitemap/index.html
+++ b/src/sitemap/index.html
@@ -30,8 +30,8 @@
             </li>
           </ul>
           <li><a href="#">Site Map</a></li>
-          <li><a href="/site_status/.html">SiteStatus</a></li>
-          <li><a href="/about/.html">About</a></li>
+          <li><a href="/site_status/">SiteStatus</a></li>
+          <li><a href="/about/">About</a></li>
         </ul>
       </section>
     </section>
