--- a/src/sitemap/index.html
+++ b/src/sitemap/index.html
@@ -17,21 +17,21 @@
           <li><a href="/">Home</a></li>
           <ul>
             <li>
-              <a href="/my_activities/">My Activities</a>
+              <a href="/randapp/my_activities/">My Activities</a>
             </li>
             <li>
-              <a href="/my_activities/?filter=completed">Completed activities</a>
+              <a href="/randapp/my_activities/?filter=completed">Completed activities</a>
             </li>
             <li>
-              <a href="/my_activities/?filter=inProgress">In progress activities</a>
+              <a href="/randapp/my_activities/?filter=inProgress">In progress activities</a>
             </li>
             <li>
-              <a href="/category/">Activity categories</a>
+              <a href="/randapp/category/">Activity categories</a>
             </li>
           </ul>
           <li><a href="#">Site Map</a></li>
-          <li><a href="/site_status/">SiteStatus</a></li>
-          <li><a href="/about/">About</a></li>
+          <li><a href="/randapp/site_status/">SiteStatus</a></li>
+          <li><a href="/randapp/about/">About</a></li>
         </ul>
       </section>
     </section>
