Fixed main relative paths

--- a/src/sitemap/index.html
+++ b/src/sitemap/index.html
@@ -14,7 +14,7 @@
     <section id="app" class="main">
       <section class="main_container">
         <ul>
-          <li><a href="/">Home</a></li>
+          <li><a href="/randapp/">Home</a></li>
           <ul>
             <li>
               <a href="/randapp/my_activities/">My Activities</a>
