update about description

--- a/src/about/index.html
+++ b/src/about/index.html
@@ -17,7 +17,7 @@
         <article>
           <section>
             <h2>About</h2>
-            <p>Welcome to our Random Activity Website! This platform was developed with the aim of providing users with a diverse range of activities to break the monotony of daily life.</p>
+            <p>Welcome to our Random Activity Website! This platform was developed with the aim of providing users with a diverse range of activities to break the monotony of daily life. The app will get the activities from boredapi and then will match with a picture from unsplash (or at least it will try).</p>
           </section>
           <section>
             <h3>Developer</h3>
