--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,23 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script src="https://kit.fontawesome.com/e4619561f0.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./css/style.css">
+    <script
+      src="https://kit.fontawesome.com/e4619561f0.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="./css/style.css" />
     <script type="module" src="./js/main.js"></script>
   </head>
   <body>
     <i class="fa-solid fa-house"></i>
-    <header class="navigation">
-    </header>
+    <header class="navigation"></header>
     <section id="app" class="main">
-      <section class="main_container">
-      </section>
+      <section class="main_container"></section>
     </section>
-    <footer class="footer">
-    </footer>
+    <footer class="footer"></footer>
     <i class="fa-solid fa-house"></i>
   </body>
 </html>
