--- a/src/sitemap/index.html
+++ b/src/sitemap/index.html
@@ -1,16 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script src="https://kit.fontawesome.com/e4619561f0.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/style.css">
+    <script
+      src="https://kit.fontawesome.com/e4619561f0.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="../css/style.css" />
     <script type="module" src="../js/general.js"></script>
   </head>
   <body>
-    <header class="navigation">
-    </header>
+    <header class="navigation"></header>
     <section id="app" class="main">
       <section class="main_container">
         <ul>
@@ -20,10 +22,14 @@
               <a href="/randapp/my_activities/">My Activities</a>
             </li>
             <li>
-              <a href="/randapp/my_activities/?filter=completed">Completed activities</a>
+              <a href="/randapp/my_activities/?filter=completed"
+                >Completed activities</a
+              >
             </li>
             <li>
-              <a href="/randapp/my_activities/?filter=inProgress">In progress activities</a>
+              <a href="/randapp/my_activities/?filter=inProgress"
+                >In progress activities</a
+              >
             </li>
             <li>
               <a href="/randapp/category/">Activity categories</a>
@@ -35,7 +41,6 @@
         </ul>
       </section>
     </section>
-    <footer class="footer">
-    </footer>
+    <footer class="footer"></footer>
   </body>
 </html>
