page titles updated

--- a/src/activity_details/index.html
+++ b/src/activity_details/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Randapp! - Activity Details</title>
     <script
       src="https://kit.fontawesome.com/e4619561f0.js"
       crossorigin="anonymous"
